--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,8 @@ nightly:
 
 pages:
   before_script:
+    - apt-get update
+    - apt-get -y install sudo curl
     - curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain stable
   stage: deploy
   only:
