Revert "Temporarily override `only` filter"
This reverts commit 79b4494c15f7a573e2dd18839ba6398acd5af246.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ pages:
     - curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain stable
   stage: deploy
   only:
-    - develop
+    - master
   script:
     - . ~/.cargo/env && cargo doc
     - rm -rf public
