--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ keywords = ["pager", "less", "more"]
 license = "Apache-2.0/MIT"
 homepage = "https://gitlab.com/imp/pager-rs"
 name = "pager"
+readme = "README.md"
 version = "0.9.0"
 
 [dependencies]
