Add cargo test template

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,15 @@
+.cargo_test_template: &cargo_test
+  stage: test
+  script:
+    - cargo test --verbose --jobs 1
+
 stages:
   - test
   - deploy
+
+stable:cargo:
+  image: rustdocker/rust:stable
+  <<: *cargo_test
 
 stable:
   image: rustdocker/rust:stable
