Move all jobs to cargo test template

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,23 +11,13 @@ stable:cargo:
   image: rustdocker/rust:stable
   <<: *cargo_test
 
-stable:
-  image: rustdocker/rust:stable
-  stage: test
-  script:
-    - cargo test --verbose --jobs 1 --release
-
-beta:
+beta:cargo:
   image: rustdocker/rust:beta
-  stage: test
-  script:
-    - cargo test --verbose --jobs 1 --release
+  <<: *cargo_test
 
-nightly:
+nightly:cargo:
   image: rustdocker/rust:nightly
-  stage: test
-  script:
-    - cargo test --verbose --jobs 1 --release
+  <<: *cargo_test
 
 pages:
   image: rustdocker/rust:stable
