--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ readme = "README.md"
 repository = "https://gitlab.com/imp/pager-rs.git"
 version = "0.9.4"
 
+[badges]
+travis-ci = { repository = "imp/pager-rs" }
+gitlab = { repository = "imp/pager-rs" }
+
 [dependencies]
 errno = "0.2"
 libc = "0.2"
