--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ name = "pager"
 readme = "README.md"
 repository = "https://gitlab.com/imp/pager-rs.git"
 version = "0.12.1"
+categories = ["command-line-interface", "text-processing"]
 
 [badges]
 travis-ci = { repository = "imp/pager-rs" }
