--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license = "Apache-2.0/MIT"
 name = "pager"
 readme = "README.md"
 repository = "https://gitlab.com/imp/pager-rs.git"
-version = "0.12.1"
+version = "0.13.0" # remember to update html_root_url
 categories = ["command-line-interface", "text-processing"]
 
 [badges]
