--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ gitlab = { repository = "imp/pager-rs" }
 [dependencies]
 errno = "0.2"
 libc = "0.2"
+shell-words = "1.1.0"
 
 [features]
 pedantic = []
