The issue is with test threads, not jobs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 .cargo_test_template: &cargo_test
   stage: test
   script:
-    - cargo test --verbose --jobs 1
+    - cargo test --verbose
 
 stages:
   - test
